--- a/app/templates/customers/client_page.html
+++ b/app/templates/customers/client_page.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
 {% block title %}
 HIUSMAGIA parturi kampaamo
 {% endblock %}
@@ -30,7 +31,7 @@ HIUSMAGIA parturi kampaamo
 
                         <li class="list-group-item d-flex justify-content-between lh-condensed">                       
                         <div>
-                            <h6 class="my-0"><a href="client_page.php" class="text-danger">Minun aikatauluni</a></h6>
+                            <h6 class="my-0"><a href="{{ url_for('main.client_page') }}"  class="text-danger">Minun aikatauluni</a></h6>
                             <small class="text-muted">Tarkista aikataulusi valitsemasi ajanjaksolla</small>
                         </div>                                                         
                         </li>
@@ -52,19 +53,27 @@ HIUSMAGIA parturi kampaamo
                             <form class="form-inline justify-content-center mt-4"  method="get">
                             
                                 <div class="form-group justify-content-center col-md-6 mb-4">
-                                    <label class="mr-4">Alkaen</label>
-                                    <input type="date" class="form-control mr-5" name="date_from" id="date_from">                   
+                                    <!--<label class="mr-4">Alkaen</label>
+                                    <input type="date" class="form-control mr-5" name="date_from" id="date_from">--> 
+                                    <div >
+                                          {{ form.date_from(id="date_from") }}
+                                    </div>
                                 </div>  
                             
                             
                                 <div class="form-group justify-content-center col-md-6 mb-4">
-                                <label class="mr-4">Saakka</label>
-                                <input type="date" class="form-control mr-5" name="date_to" id="date_to">
+                                <!--<label class="mr-4">Saakka</label>
+                                <input type="date" class="form-control mr-5" name="date_to" id="date_to">-->
+                                     <div >
+                                        {{ form.date_to(id="date_to") }}
+                                    </div>
                                 </div>
                             
                                 <div class="form-group justify-content-center col-md-12 mb-4">
-                                <button type="submit" class="btn btn-block mt-0 custom-green-buy" id="client_select">Valitse ajanjakso</button> 
-                                
+                                 <!--<button type="submit" class="btn btn-block mt-0 custom-green-buy" id="client_select">Valitse ajanjakso</button>-->
+                                 <div id="client_select">
+                                 {{ form.submit( class="btn btn-block mt-0 custom-green-buy", id="client_select" ) }}
+                                </div>
                                 <button type="reset" class="btn btn-block mt-2 custom-outline-button" name="submit" id="">Nollaa kaikki kentät</button> 
                                 </div>
                             
@@ -111,6 +120,7 @@ HIUSMAGIA parturi kampaamo
         </div>
     </div>
     <!--Row ends-->
+<script type="text/javascript" src="{{ url_for('static', filename='/js/client_reserv_select.js') }}"></script>   
 {% endblock %}
 
 <script type="text/javascript" src="client_reserv_select.js"></script>
